Extracted networking from Lording