@@ -6,7 +6,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -110,24 +109,24 @@ public class Grid<E> implements Collection<E>{
 		return streamCoordinates()
 			  .filter(coord -> coord.taxiDistance(new Coord(i, j)) == 1)
 			  .filter(this::isInGrid)
-			  .collect(Collectors.toList());
+			  .toList();
 	}
 
 	public List<Coord> getAdjacentCoordinates(int i, int j){
 		return streamCoordinates()
 			  .filter(coord -> coord.kingDistance(new Coord(i, j)) == 1)
 			  .filter(this::isInGrid)
-			  .collect(Collectors.toList());
+			  .toList();
 	}
 
 	public List<E> getDirectlyAdjacentElements(int i, int j){
 		List<Coord> coordsToGet = getDirectlyAdjacentCoordinates(i, j);		
-		return coordsToGet.stream().map(this::get).collect(Collectors.toList());
+		return coordsToGet.stream().map(this::get).toList();
 	}
 
 	public List<E> getAdjacentElements(int i, int j){
 		List<Coord> coordsToGet = getAdjacentCoordinates(i, j);		
-		return coordsToGet.stream().map(this::get).collect(Collectors.toList());
+		return coordsToGet.stream().map(this::get).toList();
 	}	
 
 	private E getFromList(int i, int j) {
